--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" />
+          <input id="busca" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" />
           <button class="btn btn-outline-success" type="submit">
             Buscar
           </button>
